<resources>
    <string name="app_name">Happy Life Style</string>

    <string name="user_login">Log In</string>
    <string name="user_register">Register</string>
    <string name="user_sign_up">Sign Up</string>

    <string name="user_name">Name</string>
    <string name="user_age">Age(years)</string>
    <string name="user_height">Height(cm)</string>
    <string name="user_weight">Weight(kg)</string>

    <string name="save_button">Save</string>
    <string name="user_gender">Select Gender: </string>
    <string name="user_purpose">Select Purpose: </string>
    <string name="user_activity_level">Select Activity Level: </string>

    <string name="new_menu">com.hls.happylifestyle.newMenu</string>

    <string name="key_first_run">com.hls.happylifestyle.firstRun</string>
    <string name="key_menu_generated">com.hls.happylifestyle.menuGenerated</string>

    <string name="key_breakfast_consumed">com.hls.happylifestyle.breakfastConsumed</string>
    <string name="key_snack1_consumed">com.hls.happylifestyle.snack1Consumed</string>
    <string name="key_snack2_consumed">com.hls.happylifestyle.snack2Consumed</string>
    <string name="key_lunch_consumed">com.hls.happylifestyle.lunchConsumed</string>
    <string name="key_dinner_consumed">com.hls.happylifestyle.dinnerConsumed</string>


    <string name="key_name">com.hls.happylifestyle.name</string>
    <string name="key_age">com.hls.happylifestyle.age</string>
    <string name="key_height">com.hls.happylifestyle.height</string>
    <string name="key_weight">com.hls.happylifestyle.weight</string>
    <string name="key_gender">com.hls.happylifestyle.gender</string>
    <string name="key_purpose">com.hls.happylifestyle.purpose</string>
    <string name="key_activity">com.hls.happylifestyle.activity</string>

    <string name="user_key_proteins_total">com.hls.happylifestyle.proteinsTotal</string>
    <string name="user_key_carbs_total">com.hls.happylifestyle.carbsTotal</string>
    <string name="user_key_fats_total">com.hls.happylifestyle.fatsTotal</string>
    <string name="user_key_calories_total">com.hls.happylifestyle.caloriesTotal</string>

    <string name="user_key_proteins_consumed">com.hls.happylifestyle.proteinsConsumed</string>
    <string name="user_key_carbs_consumed">com.hls.happylifestyle.carbsConsumed</string>
    <string name="user_key_fats_consumed">com.hls.happylifestyle.fatsConsumed</string>
    <string name="user_key_calories_consumed">com.hls.happylifestyle.caloriesConsumed</string>
    <string name="user_key_fiber_consumed">com.hls.happylifestyle.fiberConsumed</string>
    <string name="user_key_sugar_consumed">com.hls.happylifestyle.sugarConsumed</string>

    <string name="snack1_name">com.hls.happylifestyle.snack1Name</string>
    <string name="snack2_name">com.hls.happylifestyle.snack2Name</string>
    <string name="breakfast1_name">com.hls.happylifestyle.breakfast1Name</string>
    <string name="breakfast2_name">com.hls.happylifestyle.breakfast2Name</string>
    <string name="lunch1_name">com.hls.happylifestyle.lunch1Name</string>
    <string name="lunch2_name">com.hls.happylifestyle.lunch2Name</string>
    <string name="dinner1_name">com.hls.happylifestyle.dinner1Name</string>
    <string name="dinner2_name">com.hls.happylifestyle.dinner2Name</string>

    <string name="snack1_consumed">com.hls.happylifestyle.snack1Consumed</string>
    <string name="snack2_consumed">com.hls.happylifestyle.snack2Consumed</string>
    <string name="breakfast_consumed">com.hls.happylifestyle.breakfastConsumed</string>
    <string name="lunch_consumed">com.hls.happylifestyle.lunchConsumed</string>
    <string name="dinner_consumed">com.hls.happylifestyle.dinnerConsumed</string>


    <string name="snack1_weight">com.hls.happylifestyle.snack1Weight</string>
    <string name="snack2_weight">com.hls.happylifestyle.snack2Weight</string>
    <string name="breakfast1_weight">com.hls.happylifestyle.breakfast1Weight</string>
    <string name="breakfast2_weight">com.hls.happylifestyle.breakfast2Weight</string>
    <string name="lunch1_weight">com.hls.happylifestyle.lunch1Weight</string>
    <string name="lunch2_weight">com.hls.happylifestyle.lunch2Weight</string>
    <string name="dinner1_weight">com.hls.happylifestyle.dinner1Weight</string>
    <string name="dinner2_weight">com.hls.happylifestyle.dinner2Weight</string>

    <string name="proteins_used_weight">com.hls.happylifestyle.proteinsUsed</string>
    <string name="carbs_used_weight">com.hls.happylifestyle.carbsUsed</string>
    <string name="fats_used_weight">com.hls.happylifestyle.fatsUsed</string>
    <string name="calories_used_weight">com.hls.happylifestyle.caloriesUsed</string>
    <string name="fiber_used_weight">com.hls.happylifestyle.fiberUsed</string>
    <string name="sugar_used_weight">com.hls.happylifestyle.sugarUsed</string>

    <string name="proteins_calculator">com.hls.happylifestyle.proteinsCalculator</string>
    <string name="carbs_calculator">com.hls.happylifestyle.carbsCalculator</string>
    <string name="fats_calculator">com.hls.happylifestyle.fatsCalculator</string>
    <string name="calories_calculator">com.hls.happylifestyle.caloriesCalculator</string>
    <string name="fiber_calculator">com.hls.happylifestyle.fiberCalculator</string>
    <string name="sugar_calculator">com.hls.happylifestyle.sugarCalculator</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="picked_selections">Your saved picks are:</string>

    <string-array name="activity_level_spinner">
        <item>0_None</item>
        <item>1_Normal</item>
        <item>2_Active</item>
        <item>3_Normal + PhysicalActivity</item>
        <item>4_Active + PhysicalActivity</item>
        <item>5_Performance Athlete</item>

    </string-array>

    <string-array name="food_type_spinner">
        <item>snack</item>
        <item>egg</item>
        <item>dairy</item>
        <item>cereal</item>
        <item>fastFood</item>
        <item>fish</item>
        <item>seafood</item>
        <item>fruit</item>
        <item>meat</item>
        <item>nuts</item>
        <item>pasta</item>
        <item>rice</item>
        <item>salad</item>
        <item>soup</item>
        <item>desert</item>
        <item>vegetable</item>

    </string-array>


</resources>
