<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    tools:context=".Activities.ProfileActivity">

    <TextView
        android:id="@+id/pageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textPersonName"
                android:textSize="25sp" />

            <AutoCompleteTextView
                android:id="@+id/Age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_age"
                android:inputType="number"
                android:textSize="25sp" />

            <AutoCompleteTextView
                android:id="@+id/Height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_height"
                android:inputType="number"
                android:textSize="25sp" />

            <AutoCompleteTextView
                android:id="@+id/Weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_weight"
                android:inputType="numberDecimal"
                android:textSize="25sp" />

            <LinearLayout
                android:id="@+id/picked_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/picked_selections"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/picked_selections"
                        android:textColor="#000000"
                        android:textSize="25sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/picked_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/picked_purpose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/picked_activity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/genderLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/gender_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/user_gender"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/genderRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_btn_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Female"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radio_btn_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:textSize="25sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/purposeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/purpose_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/user_purpose"
                    android:textSize="25sp" />

                <RadioGroup
                    android:id="@+id/purposeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_btn_better_nutrition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Better Nutrition"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radio_btn_lose_weight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lose Weight"
                        android:textSize="25sp" />

                    <RadioButton
                        android:id="@+id/radio_btn_gain_muscle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gain Muscle"
                        android:textSize="25sp" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activityLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/activity_level_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/user_activity_level"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/activity_level_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/box_button"
            android:gravity="bottom"
            android:onClick="saveUser"
            android:padding="10dp"
            android:text="@string/save_button"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />
        <Button
            android:id="@+id/edit_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/box_button"
            android:gravity="bottom"
            android:onClick="editPressed"
            android:padding="10dp"
            android:text="EDIT"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>